...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="02j-TI-8Oo">
                                <rect key="frame" x="24" y="72" width="45" height="33"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="http://www.sheffield.ac.uk" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h73-QP-qWt">
                                <rect key="frame" x="20" y="880" width="460" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
                                <size key="titleShadowOffset" width="2.2250738585072014e-308" height="2.2250738585072014e-308"/>
                                <state key="normal" title="Socialize!" backgroundImage="social.png">
                                    <color key="titleColor" red="1" green="0.99997437000274658" blue="0.99999129772186279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="50" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Game" backgroundImage="game.png">
                                    <color key="titleColor" red="1" green="0.99997437000274658" blue="0.99999129772186279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        <outlet property="middleView" destination="4BK-LR-riX" id="5k0-8B-emx"/>
                        <outlet property="nearPlacesButton" destination="cMz-gT-4iB" id="dmq-Jz-dv8"/>
                        <outlet property="plus" destination="yyc-dk-GPj" id="tuq-b4-dwB"/>
                        <outlet property="socialButton" destination="6np-Py-h2X" id="3xg-Il-fqR"/>
                        <outlet property="weatherWidgetView" destination="hCn-NU-WeD" id="hoq-dE-YD4"/>
...
                                    <constraint firstAttribute="height" constant="70" id="QFA-QJ-rhZ"/>
                                </constraints>
                                <state key="normal" backgroundImage="neutral.png"/>
                                <connections>
                                    <action selector="neutralPressed:" destination="Dq5-As-FyX" eventType="touchUpInside" id="GZY-Uo-oS7"/>
...
                        <outlet property="emotionWidgetView" destination="eR8-RV-AWV" id="T2O-X7-NWI"/>
                        <outlet property="happyButton" destination="l6z-Vf-chh" id="6x1-CC-tOP"/>
                        <outlet property="neutral" destination="8ti-nH-bCs" id="5st-zs-gGh"/>
                        <outlet property="sadButton" destination="bca-lg-0bm" id="Mdb-9C-iJx"/>
                    </connections>
...
